fix: display camera on tablet

--- a/src/app/demo/components/cases/case-view/case-view.component.scss
+++ b/src/app/demo/components/cases/case-view/case-view.component.scss
@@ -38,7 +38,7 @@
     display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
     .mobile-hide {
         display: none;
     }
@@ -53,7 +53,7 @@
     }
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1201px) {
     .mobile-show {
         display: none;
     }
